--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
 	<artifactId>Assessment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
@@ -14,4 +19,6 @@
 			<version>3.141.59</version>
 		</dependency>
 	</dependencies>
+
+
 </project>
